# minicar-2025

./: .gitignore  .gitmodules  README.md  bluettooth.sh  hotspot.sh  packages.repos  param_loader.py
python_ws/supervised_learning/: .gitignore  1_extract_topics_from_bag.py  2_train.py  3_convert_weight_format.py  README.md  deploy_model.sh  requirements.txt
python_ws/supervised_learning/config/: train.yaml
python_ws/supervised_learning/src/data/: dataset.py  transform.py
python_ws/supervised_learning/src/model/: pilotnet.py
ros2_ws/src/control/control_filter/: CMakeLists.txt
ros2_ws/src/control/control_filter/config/: control_filter.param.yaml
ros2_ws/src/control/control_filter/src/: control_filter_node.cpp
ros2_ws/src/core/bag_manager_py/: setup.cfg
ros2_ws/src/core/bag_manager_py/bag_manager_node/: bag_manager_node.py
ros2_ws/src/core/jetracer_node/: package.xml
ros2_ws/src/core/jetracer_node/config/: jetracer_node.param.yaml
ros2_ws/src/core/jetracer_node/jetracer_node/: control_node.py
ros2_ws/src/core/joy_manager/: CMakeLists.txt  package.xml
ros2_ws/src/core/joy_manager/src/: joy_manager_node.cpp
ros2_ws/src/isaac_ros/: .gitignore
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/gxf_isaac_e2e_pilot/: CMakeLists.txt  package.xml
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/gxf_isaac_e2e_pilot/gxf/detectnet/: ackermann_message.hpp  pilot_net_decoder.cpp  pilot_net_decoder.hpp  pilot_net_extension.cpp
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/isaac_ros_e2e_pilot/: CMakeLists.txt  package.xml
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/isaac_ros_e2e_pilot/config/: params.yaml  pilot_net_node.yaml  pilotnet_config.pbtxt
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/isaac_ros_e2e_pilot/include/isaac_ros_e2e_pilot/: pilot_net_decoder_node.hpp
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/isaac_ros_e2e_pilot/launch/: isaac_ros_e2e_pilot.launch.xml
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/isaac_ros_e2e_pilot/scripts/: setup_model.sh
ros2_ws/src/isaac_ros/isaac_ros_original_pkg/isaac_ros_e2e_pilot/src/: pilot_net_decoder_node.cpp
ros2_ws/src/isaac_ros/src/: .gitignore
ros2_ws/src/isaac_ros/src/isaac_ros_original_pkg/isaac_ros_e2e_pilot/: CMakeLists.txt  package.xml
ros2_ws/src/isaac_ros/src/isaac_ros_original_pkg/isaac_ros_e2e_pilot/config/: params.yaml
ros2_ws/src/isaac_ros/src/isaac_ros_original_pkg/isaac_ros_e2e_pilot/include/isaac_ros_e2e_pilot/: pilot_net_decoder_node.hpp
ros2_ws/src/isaac_ros/src/isaac_ros_original_pkg/isaac_ros_e2e_pilot/launch/: isaac_ros_e2e_pilot_core.launch.py
ros2_ws/src/isaac_ros/src/isaac_ros_original_pkg/isaac_ros_e2e_pilot/src/: pilot_net_decoder_node.cpp
ros2_ws/src/launch/system_launch/config/: filter.param.yaml
ros2_ws/src/launch/system_launch/launch/: base_system.launch.xml
ros2_ws/src/original_pkg/control/control_filter/: package.xml
ros2_ws/src/original_pkg/control/control_filter/launch/: filter.launch.xml
ros2_ws/src/original_pkg/core/bag_manager_py/: package.xml  setup.py
ros2_ws/src/original_pkg/core/bag_manager_py/config/: bag_manager.param.yaml
ros2_ws/src/original_pkg/core/bag_manager_py/launch/: bag_manager_node.launch.xml
ros2_ws/src/original_pkg/core/jetracer_node/: setup.cfg  setup.py
ros2_ws/src/original_pkg/core/jetracer_node/jetracer_node/: control_node.py
ros2_ws/src/original_pkg/core/jetracer_node/launch/: jetracer.launch.xml
ros2_ws/src/original_pkg/core/joy_manager/: CMakeLists.txt
ros2_ws/src/original_pkg/core/joy_manager/config/: teleop.param.yaml
ros2_ws/src/original_pkg/core/joy_manager/launch/: teleop.launch.xml
ros2_ws/src/original_pkg/core/joy_manager/src/: joy_manager_node.cpp
ros2_ws/src/original_pkg/launch/: .gitignore
ros2_ws/src/original_pkg/launch/system_launch/: CMakeLists.txt  package.xml
ros2_ws/src/original_pkg/launch/system_launch/launch/: base_system.launch.xml
scripts/: bluetooth.sh  hotspot.sh  tmux.sh
