<?xml version="1.0"?>
<package format="3">
  <name>control_filter</name>
  <version>0.0.1</version>
  <description>Ackermann control filter node</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

